# wealth-planner

./: .gitignore  README.md  app.py  index.js  package-lock.json  package.json  pyproject.toml
lib/: clean-db.js
scripts/: clean-db.js
src/: App.jsx  constants.js  index.jsx
src/components/: AddCreditAccountModal.jsx  AddInstitutionModal.jsx  AddTransactionsModal.jsx  BottomBar.jsx  Dashboard.jsx  EditTransactionCategoryModal.jsx  HomeActivityFeed.jsx  HomeOverviewPanel.jsx  InstitutionsDashboard.jsx  Tabs.jsx
src/data/: demo.js
src/services/: commands.js  database.js  institutionSwitch.js
src/services/ai/: categorizeTransactions.js  index.js
src/services/ai/providers/: gemini.js  index.js
src/services/analytics/: spendInsights.js
src/services/data/: adapter.js  index.js  transactionRepository.js
src/services/data/adapters/: jsonAdapter.js  sqliteAdapter.js
tests/: commands.test.js  configIsolation.test.js  constantsConfigDir.test.js  csvFormats.test.js  dashboardInsightsLayout.test.js  databaseInstitutionAware.test.js  institutionSwitch.test.js  spendInsights.test.js  viewFilter.test.js
wealth_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
