[project]
name = "wealth-planner"
version = "0.1.0"
description = "Textual hello world demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.70.0",
]

[project.scripts]
hello-tui = "app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
